New Project Creation Created Java servlet AgeCalculatorServlet Created new JSP ageCalculator Changed JSP name to index

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -10,7 +10,7 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>AgeCalculatorServlet</servlet-name>
-        <url-pattern>/agecalculator</url-pattern>
+        <url-pattern>/ageCalculator</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>IndexServlet</servlet-name>
